Pages Navbar Updated

--- a/Sprout/casestudies.html
+++ b/Sprout/casestudies.html
@@ -80,31 +80,23 @@
 
 	
     
-    <nav class="navbar" style="margin-top:20px;margin-left: auto; margin-right: auto; background-color:white; width:80%;">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="background-color:green">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-        <img src="Assets/Logo.png" style="width:40%; height:auto;">
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-          <li><a href="#"><h1>ABOUT</h1></a></li>
-          <li><a href="#"><h1>PORTFOLIO</h1></a></li>
-          <li><a href="#"><h1>CASE STUDIES</h1></a></li>
-          <li><a href="#"><h1>PARTNERS</h1></a></li>
-          <li><a href="#"><h1>CONTACT</h1></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <nav id="nav" class="nav" style="margin-left:auto;margin-right:auto; background-color:white; width:70%; top:95px">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="background-color:green">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+                <ul class="nav navbar-nav">
+                </ul>
+            </div>
+        </div>
+    </nav>
+
         
-   <center><h1>CASE STUDIES</h1></center>
     <!--BUGS -->
-    <section id="intro" data-speed="6" data-type="background">
         <div class="container">
             <div class="row-fluid">
                 <h1>BUGS-Summer 2013/2014</h1>
