--- a/Sprout/index.html
+++ b/Sprout/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js" lang="en">
 <head>
 	<meta charset="utf-8">
@@ -89,9 +89,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#Top"><img src="Assets/Logo.png" style="width:40%; height:auto;"></a>
+                <a href="index.html"><img src="Assets/Logo.png" style="position:absolute;width:15%;top:10px"></a>
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="collapse navbar-collapse" id="myNavbar" style="left:20%">
                 <ul class="nav navbar-nav">
                     <li><a href="#About"><h1>ABOUT</h1></a></li>
                     <li><a href="#Portfolio"><h1>PORTFOLIO</h1></a></li>
