--- a/Sprout/portfolio.html
+++ b/Sprout/portfolio.html
@@ -83,15 +83,15 @@
     <nav id="nav" class="nav" style="margin-left:auto;margin-right:auto; background-color:white; width:70%; top:95px">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="background-color:green">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="background-color:#96ca5a">
+                    <span class="icon-bar" style="background-color:#189348"></span>
+                    <span class="icon-bar" style="background-color:#189348"></span>
+                    <span class="icon-bar" style="background-color:#189348"></span>
                 </button>
-                <a href="index.html"><img src="Assets/Logo.png" style="position:absolute;width:15%;top:10px"></a>
+                <a href="index.html"><img src="Assets/Logo.png" style="position:absolute;width:15%;top:10px;z-index:10"></a>
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar" style="left:20%">
-                <ul class="nav navbar-nav">
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html#About"><h1>ABOUT</h1></a></li>
                     <li><a href="index.html#Portfolio"><h1>PORTFOLIO</h1></a></li>
                     <li><a href="index.html#CS"><h1>CASE STUDIES</h1></a></li>
